Fix: Enable flexible CORS for Vercel and make Kafka optional for Render